tests/baselines/reference/staticIndexers.errors.txt
==== tests/cases/compiler/staticIndexers.ts (3 errors) ====
    // static indexers not allowed
    
    class C {
        static [x: string]: string;
        ~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }
    
    class D {
        static [x: number]: string;
        ~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }
    
    class E<T> {
        static [x: string]: T;
        ~~~~~~
!!! error TS1055: Modifiers cannot appear here.
    }